--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ serde_urlencoded = "0.7.0"
 structopt = { version = "0.3" }
 tempfile = "3.2.0"
 tokio = { version = "1", features = ["full"] }
-tokio-stream = { version = "0.1.7", features = [ "io-util" ] }
 tokio-util = "0.6.7"
 warp = "0.3"
 walkdir = "2"
 zstd = "0.11"
+tokio-stream = { version = "0.1.15", features = ["net"] }
